# neural-cdma

./: .gitignore  CITATION.cff  LICENSE  PAPER.md  README.md  amplitude_null.py  build_pdf.py  capacity_fix.py  capacity_fix_result.json  capacity_law.py  capacity_law_result.json  cdma_neurosurgery.py  cdma_neurosurgery_result.json  code_kcap.py  code_kcap_result.json  coded_vocab_kcap.py  coded_vocab_kcap_result.json  eigen_steering.py  eigen_steering_result.json  hybrid_multiplex.py  hybrid_result.json  kv_selective.py  kv_selective_result.json  multithread.py  multithread_result.json  profile_depth.py  profile_depth_result.json  prototype_selective.py  prototype_selective_result.json  rank_sweep.py  rank_sweep_result.json  requirements.txt  train_superposition.py  train_superposition_result.json  train_transformer_superposition.py  train_transformer_superposition_result.json  validate_llm.py  validate_llm_full.py  validate_llm_full_result.json  validate_llm_result.json  (+11 more)
.github/workflows/: ci.yml
watermark_pkg/: README.md  pyproject.toml
watermark_pkg/cdma_watermark/: __init__.py  cli.py  codec.py  ecc.py  watermark.py
watermark_pkg/tests/: test_codec.py  test_real_model.py  test_verify_pvalue.py
