[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdma-watermark"
version = "0.1.0"
description = "White-box CDMA activation watermark for LLM provenance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "numpy",
    "scipy",
]

[project.scripts]
cdma-watermark = "cdma_watermark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdma_watermark*"]
